# my-bot-example

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
locales/en/LC_MESSAGES/: mybot.ftl
locales/ru/LC_MESSAGES/: mybot.ftl
src/: __main__.py  settings.py
src/data/: config.py
src/db/: __init__.py  base.py  models.py
src/handlers/: __init__.py  basic.py  error.py
src/keyboards/: __init__.py  builders.py  default_commands.py
src/middlewares/: __init__.py  callback.py  db.py  throttling.py  unhandled.py  user.py
src/utils/: func.py
