[tool.poetry]
name = "my-bot-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = {extras = ["i18n"], version = "^3.6.0"}
sqlalchemy = "^2.0.30"
environs = "^11.0.0"
loguru = "^0.7.2"
asyncpg = "^0.29.0"
fluent-runtime = "^0.4.0"
aiogram-i18n = "^1.3.4"
cachetools = "^5.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
